--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.9.1",
     "bootstrap4-toggle": "^3.6.1",
     "cookie-parser": "~1.4.4",
+    "cropperjs": "^1.5.12",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
