--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "promise": "^8.2.0",
     "razorpay": "^2.8.3",
     "session": "^0.1.0",
-    "twilio": "^3.82.2"
+    "twilio": "^3.82.2",
+    "voucher-code-generator": "^1.3.0"
   }
 }
